@@ -1,5 +1,7 @@
 import Dependencies.*
 
+ThisBuild / logLevel := Level.Warn
+
 ThisBuild / organization  := "life.aephyr"
 ThisBuild / scalaVersion  := V.scala3
 ThisBuild / versionScheme := Some("early-semver")
@@ -21,14 +23,10 @@ identityDomain / semanticdbEnabled  := false
 
 ThisBuild / cancelable.withRank(KeyRanks.Invisible) := true
 
-// ThisBuild / turbo := true                         // faster reload / project switches
-// ThisBuild / parallelExecution := true             // compile/test in parallel across modules
-Test / fork := false                              // ZIO Test runs fine in-process and is faster
+ThisBuild / Test / fork := true
+ThisBuild / Test / javaOptions += "--sun-misc-unsafe-memory-access=allow"
 
-// fewer eviction recalculations during reload
 ThisBuild / evictionErrorLevel := Level.Info
-// print timings to spot bottlenecks
-ThisBuild / javaOptions += "-Dsbt.task.timings=true"
 
 ThisBuild / scalacOptions ++= Seq(
   "-deprecation",
@@ -43,7 +41,8 @@ ThisBuild / scalacOptions ++= Seq(
   "-language:strictEquality"
 )
 
-ThisBuild / testFrameworks += new TestFramework("zio.test.sbt.ZTestFramework")
+Test / testFrameworks += new TestFramework("zio.test.sbt.ZTestFramework")
+Test / testOptions += Tests.Argument(TestFrameworks.ZIOTest, "-q")
 
 ThisBuild / dependencyOverrides := Seq(
   Libs.zio,
@@ -78,7 +77,9 @@ def mod(p: String, n: String) = Project.apply(n, file(s"modules/$p"))
 
 lazy val root = (project in file("."))
   .aggregate(
-    sharedKernel,
+    kernel,
+    kernelJsoniter,
+    kernelTapir,
     authDomain,
     authApplication,
     identityDomain,
@@ -93,12 +94,30 @@ lazy val root = (project in file("."))
   )
   .settings(publish / skip := true)
 
-lazy val sharedKernel = mod("shared/kernel", "shared-kernel")
+lazy val kernel = mod("shared/kernel", "kernel")
+
+lazy val kernelJsoniter = mod("shared/kernel-jsoniter", "kernel-jsoniter")
+  .dependsOn(kernel)
+  .settings(
+    libraryDependencies ++=
+      prod(Libs.jsoniterCore) ++
+        provided(Libs.jsoniterMacros)
+  )
+
+lazy val kernelTapir = mod("shared/kernel-tapir", "kernel-tapir")
+  .dependsOn(kernel)
+  .settings(
+    libraryDependencies ++=
+      prod(Libs.tapirCore)
+  )
+
+lazy val sharedSecurity = mod("shared/security", "shared-security")
+  .dependsOn(kernel)
 
 lazy val sharedApplication = mod("shared/application", "shared-application")
-  .dependsOn(sharedKernel)
+  .dependsOn(kernel)
   .settings(
-    libraryDependencies ++= Seq(
+    libraryDependencies ++= prod(
       Libs.zio,
       Libs.zioConfig,
       Libs.zioConfigTypesafe,
@@ -107,13 +126,13 @@ lazy val sharedApplication = mod("shared/application", "shared-application")
   )
 // -------- BC: auth
 lazy val authDomain = mod("bc/auth/domain", "auth-domain")
-  .dependsOn(sharedKernel, identityDomain)
+  .dependsOn(kernel, identityDomain)
 
 lazy val authApplication =
   mod("bc/auth/application", "auth-application")
     .dependsOn(authDomain, authPorts, sharedApplication)
     .settings(
-      libraryDependencies ++= Seq(
+      libraryDependencies ++= prod(
         Libs.zio,
         Libs.zioLogging,
         Libs.zioStacktracer
@@ -121,9 +140,9 @@ lazy val authApplication =
     )
 
 lazy val authPorts = mod("bc/auth/ports", "auth-ports")
-  .dependsOn(sharedKernel, authDomain, identityDomain)
+  .dependsOn(kernel, authDomain, identityDomain)
   .settings(
-    libraryDependencies ++= Seq(
+    libraryDependencies ++= prod(
       Libs.zio,
       Libs.zioLogging,
       Libs.zioStacktracer
@@ -132,13 +151,13 @@ lazy val authPorts = mod("bc/auth/ports", "auth-ports")
 
 // -------- BC: identity
 lazy val identityDomain = mod("bc/identity/domain", "identity-domain")
-  .dependsOn(sharedKernel)
+  .dependsOn(kernel)
 
 lazy val identityApplication =
   mod("bc/identity/application", "identity-application")
     .dependsOn(identityDomain, identityPorts, sharedApplication)
     .settings(
-      libraryDependencies ++= Seq(
+      libraryDependencies ++= prod(
         Libs.zio,
         Libs.zioLogging,
         Libs.zioStacktracer
@@ -158,14 +177,14 @@ lazy val identityPorts =
 
 // -------- BC: diary
 lazy val diaryDomain = mod("bc/diary/domain", "diary-domain")
-  .dependsOn(sharedKernel)
+  .dependsOn(kernel)
 
 lazy val diaryApplication = mod("bc/diary/application", "diary-application")
   .dependsOn(diaryDomain, identityDomain)
 
 // -------- Adapters (implement Ports from *Application)
 lazy val adaptersDb = mod("adapters/db", "adapters-db")
-  .dependsOn(identityApplication, diaryApplication, authPorts, sharedKernel)
+  .dependsOn(identityApplication, diaryApplication, authPorts, kernel)
   .settings(
     Test / unmanagedResourceDirectories += (dbMigrations / Compile / resourceDirectory).value,
     libraryDependencies ++= prod(
@@ -177,7 +196,7 @@ lazy val adaptersDb = mod("adapters/db", "adapters-db")
   )
 
 lazy val adaptersMessaging = mod("adapters/messaging", "adapters-messaging")
-  .dependsOn(identityApplication, diaryApplication, sharedKernel)
+  .dependsOn(identityApplication, diaryApplication, kernel)
   .settings(
     libraryDependencies ++= prod(
       Libs.zio,
@@ -186,12 +205,12 @@ lazy val adaptersMessaging = mod("adapters/messaging", "adapters-messaging")
   )
 
 lazy val adaptersImport = mod("adapters/import", "adapters-import")
-  .dependsOn(sharedKernel)
+  .dependsOn(kernel)
 
 lazy val adaptersSecurity = mod("adapters/security", "adapters-security")
   .dependsOn(
     sharedApplication,
-    sharedKernel,
+    kernel,
     identityPorts,
     authPorts,
     identityDomain,
@@ -199,15 +218,16 @@ lazy val adaptersSecurity = mod("adapters/security", "adapters-security")
   ).settings(
     libraryDependencies ++= prod(
       Libs.zio,
-      Libs.webAuthn
+      Libs.webAuthn,
+      Libs.nimbus
     )
   )
 
 // -------- APIs
 lazy val httpApis = mod("http/apis", "http-apis")
-  .dependsOn(sharedKernel)
+  .dependsOn(kernel, kernelJsoniter, kernelTapir, sharedSecurity, authDomain)
   .settings(
-    libraryDependencies ++= Seq(
+    libraryDependencies ++= prod(
       Libs.sttpModel,
       Libs.tapirCore,
       Libs.tapirJsoniter,
@@ -218,13 +238,14 @@ lazy val httpApis = mod("http/apis", "http-apis")
 lazy val httpServer = mod("http/server", "http-server")
   .dependsOn(
     httpApis,
-    sharedKernel,
+    kernel,
     adaptersSecurity,
     adaptersDb,
     authPorts,
     authApplication
   ).settings(
-    libraryDependencies ++= Seq(
+    libraryDependencies ++= prod(
+      Libs.jsoniterCore,
       Libs.tapirCore,
       Libs.tapirRedocBundle,
       Libs.tapirRedoc,
@@ -247,6 +268,8 @@ lazy val httpServer = mod("http/server", "http-server")
     ) ++ runtime(
       Libs.logback,
       Libs.logbackEncoder
+    )++ provided(
+      Libs.jsoniterMacros
     ),
     Compile / mainClass := Some("aephyr.http.server.HttpServer"),
     run / javaOptions ++= Seq("-Dconfig.resource=application-dev.conf")
